Budget and number of guest is sent using post method , new category page added

--- a/FypWeb/StyleSheet.css
+++ b/FypWeb/StyleSheet.css
@@ -196,3 +196,10 @@ margin:auto;
 height:100%;
 
 }
+
+ .line{
+width: 280px;
+height: 47px;
+border-bottom: 1px solid black;
+position: absolute;
+}
