--- a/FypWeb/css/custom.css
+++ b/FypWeb/css/custom.css
@@ -44,3 +44,40 @@ margin:auto;
 
 
 }
+
+/*bootstrap responsive repeater*/
+zoom {      
+-webkit-transition: all 0.015s ease-in-out;    
+-moz-transition: all 0.015s ease-in-out;    
+transition: all 0.015s ease-in-out;     
+cursor: -webkit-zoom-in;      
+cursor: -moz-zoom-in;      
+cursor: zoom-in;  
+}     
+
+.zoom:hover,  
+.zoom:active,   
+.zoom:focus {
+/**adjust scale to desired size, 
+add browser prefixes**/
+-ms-transform: scale(2.5);    
+-moz-transform: scale(2.5);  
+-webkit-transform: scale(2.5);  
+-o-transform: scale(2.5);  
+transform: scale(1.2);    
+position:relative;      
+z-index:20;  
+}
+
+/**To keep upscaled images visible on mobile, 
+increase left & right margins a bit**/  
+@media only screen and (max-width: 20px) {   
+ul.gallery {      
+margin-left: 5vw;       
+margin-right: 5vw;
+}
+
+/**TIP: Easy escape for touch screens,
+give gallery's parent container a cursor: pointer.**/
+.DivName {cursor: pointer}
+}
